--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="/pyproject/css/style.css">
+
 
   <!-- =======================================================
   * Template Name: Arsha
