--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link rel="stylesheet" href="/pyproject/css/style.css">
+  <link rel="stylesheet" href="/pyproject/css/main.css">
 
 
   <!-- =======================================================
