--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="pyproject/main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 
 
   <!-- =======================================================
