--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="#hero" class="">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
-
+          <li><a href="BlogSpot.html">Blog</a></li>
           <li><a href="#footer">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -324,6 +324,7 @@
     </section><!-- /Faq 2 Section -->
 
     <!-- Contact Section -->
+
 
 
   </main>
