--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://docs.google.com/forms/d/1cApo6XtrclIfYARrGtYlQEoT5VNmrI4Q5lvY3ptPwbI/edit">Class Sign Up</a>
+      <a class="btn-getstarted" href="https://docs.google.com/forms/d/e/1FAIpQLSdzXKmsILIDVserO4bT_8jg5L11JgEQuZPvaAvf2Ctwi9v8dA/viewform?usp=sharing&ouid=102240171057324491335">Class Sign Up</a>
 
     </div>
   </header>
@@ -116,7 +116,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <p>At The Py Project, we provide FREE tutoring to middle and elementary school students who want to learn the basics of computer programming. Our tutors are all dedicated high school students who have a passion for programming and are eager to share their knowledge. We believe that everyone should have access to the tools and skills needed to explore the world of computer programming. Our tutors are excited to help students of all ages learn the fundamentals of Python and help them gain confidence in their coding skills.
             </p>
-            <a href="https://docs.google.com/forms/d/1cApo6XtrclIfYARrGtYlQEoT5VNmrI4Q5lvY3ptPwbI/edit" class="read-more"><span>Class Sign Up</span><i class="bi bi-arrow-right"></i></a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdzXKmsILIDVserO4bT_8jg5L11JgEQuZPvaAvf2Ctwi9v8dA/viewform?usp=sharing&ouid=102240171057324491335" class="read-more"><span>Class Sign Up</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
         </div>
@@ -353,7 +353,7 @@
             <li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#testimonials">Testimonials</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="https://docs.google.com/forms/d/1cApo6XtrclIfYARrGtYlQEoT5VNmrI4Q5lvY3ptPwbI/edit">Class Sign Up</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdzXKmsILIDVserO4bT_8jg5L11JgEQuZPvaAvf2Ctwi9v8dA/viewform?usp=sharing&ouid=102240171057324491335">Class Sign Up</a></li>
           </ul>
         </div>
 
